added some icons

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Shamim Ahmed Robin</title>
     <link rel="shortcut icon" href="images/Shamim.jpg" type="image/x-icon">
     <link rel="stylesheet" href="styles/styles.css">
+    <script src="https://kit.fontawesome.com/f743ed5433.js" crossorigin="anonymous"></script>
 </head>
 <body class="font">
     <header class="header secondary-bg">
@@ -24,8 +25,8 @@
                 <p class="banner-description">
                     Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.
                 </p>
-                <button class="btn-primary"><a target="_blank" class="btn-primary" href="Shamim-Ahmed-Robin-resume.pdf">Download CV</a></button>
-                <button class="btn-2"><a target="_blank" class="btn-2" href="tel:+8801887353914">Contact</a></button>
+                <button class="btn-primary"><a target="_blank" class="btn-primary" href="Shamim-Ahmed-Robin-resume.pdf"><i class="fa-solid fa-arrow-down"></i> Download CV</a></button>
+                <button class="btn-2"><a target="_blank" class="btn-2" href="tel:+8801887353914"><i class="fa-solid fa-phone"></i> Contact</a></button>
             </div>
             <img class="banner-profile-pic" src="images/shamim.png" alt="Shamim">
         </div>
@@ -126,7 +127,7 @@
                 </div>
             </div>
             <div class="resume-button  text-center">
-                <button class="btn-primary"><a target="_blank" class="btn-primary" href="Shamim-Ahmed-Robin-resume.pdf">Download CV</a></button>
+                <button class="btn-primary"><a target="_blank" class="btn-primary" href="Shamim-Ahmed-Robin-resume.pdf"><i class="fa-solid fa-arrow-down"></i> Download CV</a></button>
             </div>
         </section>
         
