--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Shamim Ahmed Robin</title>
-    <link rel="shortcut icon" href="images/Shamim.jpg" type="image/x-icon">
+    <link rel="shortcut icon" href="images/Favicon.jpg" type="image/x-icon">
     <link rel="stylesheet" href="styles/styles.css">
     <script src="https://kit.fontawesome.com/f743ed5433.js" crossorigin="anonymous"></script>
 </head>
