--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Shamim Ahmed Robin</title>
-    <link rel="shortcut icon" href="images/Favicon.jpg" type="image/x-icon">
+    <link rel="shortcut icon" href="images/Shamim Fav.png" type="image/x-icon">
     <link rel="stylesheet" href="styles/styles.css">
     <script src="https://kit.fontawesome.com/f743ed5433.js" crossorigin="anonymous"></script>
 </head>
@@ -15,7 +15,7 @@
             <ul>
                 <li><a class="dark-2" href="">Portfolio</a></li>
                 <li><a class="dark-2" href="">Blog</a></li>
-                <li><a href=""><button class="btn-primary"><a target="_blank" class="btn-primary" href="https://call.whatsapp.com/voice/V8gX9tlJOEon2OXIb8Vyt2">Hire Me</a></button></a></li>
+                <li><a href=""><button class="btn-primary"><a target="_blank" class="btn-primary" href="https://call.whatsapp.com/voice/V8gX9tlJOEon2OXIb8Vyt2"><i class="fa-brands fa-hive"></i> Hire Me</a></button></a></li>
             </ul>
         </nav>
         <div class="banner">
