--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
                 <p class="banner-description">
                     Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.
                 </p>
-                <button class="btn-primary"><a target="_blank" class="btn-primary" href="Shamim-Ahmed-Robin-resume.pdf"><i class="fa-solid fa-arrow-down"></i> Download CV</a></button>
-                <button class="btn-2"><a target="_blank" class="btn-2" href="tel:+8801887353914"><i class="fa-solid fa-phone"></i> Contact</a></button>
+                <button onclick="welcome()" class="btn-primary"><a target="_blank" class="btn-primary" href="Shamim-Ahmed-Robin-resume.pdf"><i class="fa-solid fa-arrow-down"></i> Download CV</a></button>
+                <button onclick="call()" class="btn-2"><a target="_blank" class="btn-2" href="tel:+8801887353914"><i class="fa-solid fa-phone"></i> Contact</a></button>
             </div>
             <img class="banner-profile-pic" src="images/shamim.png" alt="Shamim">
         </div>
@@ -127,7 +127,7 @@
                 </div>
             </div>
             <div class="resume-button  text-center">
-                <button class="btn-primary"><a target="_blank" class="btn-primary" href="Shamim-Ahmed-Robin-resume.pdf"><i class="fa-solid fa-arrow-down"></i> Download CV</a></button>
+                <button onclick="welcome()" class="btn-primary"><a target="_blank" class="btn-primary" href="Shamim-Ahmed-Robin-resume.pdf"><i class="fa-solid fa-arrow-down"></i> Download CV</a></button>
             </div>
         </section>
         
@@ -160,6 +160,14 @@
             </div>
         </section>
     </footer>
-    
+    <Script>
+        // alert("You're going on Shamim's Website")
+        function welcome() {
+            alert("Want to download CV?")
+        }
+        function call() {
+            alert("Want to call Shamim?")
+        }
+    </Script>
 </body>
 </html>
