--- a/index.html
+++ b/index.html
@@ -163,10 +163,10 @@
     <Script>
         // alert("You're going on Shamim's Website")
         function welcome() {
-            alert("Want to download CV?")
+            confirm("Do you want to download the CV?")
         }
         function call() {
-            alert("Want to call Shamim?")
+            confirm("Do you want to call?")
         }
     </Script>
 </body>
