added some links

--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
         <nav>
             <h3 class="nav-title">SHA<span class="text-primary">MI</span>M</h3>
             <ul>
-                <li><a class="dark-2" href="">Portfolio</a></li>
-                <li><a class="dark-2" href="">Blog</a></li>
-                <li><a href=""><button class="btn-primary"><a target="_blank" class="btn-primary" href="https://call.whatsapp.com/voice/V8gX9tlJOEon2OXIb8Vyt2"><i class="fa-brands fa-hive"></i> Hire Me</a></button></a></li>
+                <li><a target="_blank" class="dark-2" href="https://sites.google.com/view/shamimahmedrobin/home">Portfolio</a></li>
+                <li><a target="_blank" class="dark-2" href="https://shamimahmedrobin.blogspot.com/">Blog</a></li>
+                <li><a target="_blank" href=""><button class="btn-primary"><a class="btn-primary" href="mailto:shamimahmedrobin5@gmail.com"><i class="fa-brands fa-hive"></i> Hire Me</a></button></a></li>
             </ul>
         </nav>
         <div class="banner">
@@ -163,10 +163,10 @@
     <Script>
         // alert("You're going on Shamim's Website")
         function welcome() {
-            confirm("Do you want to download the CV?")
+            confirm ("Do you want to download the CV?")
         }
         function call() {
-            confirm("Do you want to call?")
+            confirm ("Do you want to call?")
         }
     </Script>
 </body>
