--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <script src="https://kit.fontawesome.com/f743ed5433.js" crossorigin="anonymous"></script>
 </head>
 <body class="font">
-    <header class="header secondary-bg">
+    <header class="header secondary-bg hide">
         <nav>
             <h3 class="nav-title">SHA<span class="text-primary">MI</span>M</h3>
             <ul>
@@ -32,7 +32,7 @@
         </div>
     </header>
     <main>
-        <section class="about secondary-bg">
+        <section class="about secondary-bg hide">
             <div class="bg-sec">
                 <h3 class="section-title">About Me</h3>
             <p class="banner-description">I,m a designer & developer with a passion for web design. I enjoy developing simple, clean and slick websites that provide real value to the end user. Thousands of clients have procured exceptional resulfs while working with me. Delivering work within time and budget which meets clients requirements in our mata.</p>
@@ -56,7 +56,7 @@
             </div>
             </div>
         </section>
-        <section class="skills">
+        <section class="skills hide">
             <h3 class="section-title text-center">What I Do</h3>
             <p class="banner-description text-center">I have more than 10 years experience building software for clients all over the world. Below is a quick overview of my main technical skill sets and technologies i use. Want to find out more about my experience? Check out my online resume and project portfolio.</p>
             <div class="skill-conteiner">
@@ -82,7 +82,7 @@
                 </div>
             </div>
         </section>
-        <section class="resume">
+        <section class="resume hide">
             <h3 class="section-title text-center">A summary of My Resume</h3>
             <div class="resume-content">
                 <div>
