--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             </div>
             </div>
         </section>
-        <section class="skills hide">
+        <section class="skills">
             <h3 class="section-title text-center">What I Do</h3>
             <p class="banner-description text-center">I have more than 10 years experience building software for clients all over the world. Below is a quick overview of my main technical skill sets and technologies i use. Want to find out more about my experience? Check out my online resume and project portfolio.</p>
             <div class="skill-conteiner">
@@ -82,7 +82,7 @@
                 </div>
             </div>
         </section>
-        <section class="resume hide">
+        <section class="resume">
             <h3 class="section-title text-center">A summary of My Resume</h3>
             <div class="resume-content">
                 <div>
@@ -139,15 +139,17 @@
                 <p class="section-description">
                     Please fill out the form on this section to contact with me or call between 9:00 A.M and 8.00 P.M ET, Monday through Friday.
                 </p>
-                <a href="https://www.facebook.com/shamimahmedrobin5" target="_blank">
-                    <img class="social_icon" src="images/icons/facebook.png" alt="facebook">
-                </a>
-                <a href="https://x.com/ShamimRobin10?t=eaqhXfCUCxho1U_gyLO1nQ&s=09" target="_blank">
-                    <img class="social_icon" src="images/icons/twitter.png" alt="Twit">
-                </a>
-                <a href="https://www.instagram.com/shamim__robin?igsh=OW9peXJzOGp3cmty" target="_blank">
-                    <img class="social_icon" src="images/icons/insta.png" alt="Insta">
-                </a>
+                <div class="social">
+                    <a href="https://www.facebook.com/shamimahmedrobin5" target="_blank">
+                        <img class="social_icon" src="images/icons/facebook.png" alt="facebook">
+                    </a>
+                    <a href="https://x.com/ShamimRobin10?t=eaqhXfCUCxho1U_gyLO1nQ&s=09" target="_blank">
+                        <img class="social_icon" src="images/icons/twitter.png" alt="Twit">
+                    </a>
+                    <a href="https://www.instagram.com/shamim__robin?igsh=OW9peXJzOGp3cmty" target="_blank">
+                        <img class="social_icon" src="images/icons/insta.png" alt="Insta">
+                    </a>
+                </div>
             </div>
             <div>
                 <h3 class="section-title">Let’s Message me</h3>
