added all responsive

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <script src="https://kit.fontawesome.com/f743ed5433.js" crossorigin="anonymous"></script>
 </head>
 <body class="font">
-    <header class="header secondary-bg hide">
-        <nav>
+    <header class="header secondary-bg">
+        <nav class="middle">
             <h3 class="nav-title">SHA<span class="text-primary">MI</span>M</h3>
             <ul>
                 <li><a target="_blank" class="dark-2" href="https://sites.google.com/view/shamimahmedrobin/home">Portfolio</a></li>
@@ -32,7 +32,7 @@
         </div>
     </header>
     <main>
-        <section class="about secondary-bg hide">
+        <section class="about secondary-bg">
             <div class="bg-sec">
                 <h3 class="section-title">About Me</h3>
             <p class="banner-description">I,m a designer & developer with a passion for web design. I enjoy developing simple, clean and slick websites that provide real value to the end user. Thousands of clients have procured exceptional resulfs while working with me. Delivering work within time and budget which meets clients requirements in our mata.</p>
